--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,18 @@ color: red;
 .colorBlue {
 color: rgb(72, 0, 255);
 }
+
+
+.loader {
+  animation: loader-spin infinite 20s linear;
+}
+
+
+@keyframes loader-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
