--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,19 @@ color: rgb(72, 0, 255);
 
 
 .loader {
-  animation: loader-spin infinite 20s linear;
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #3498db;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1s linear infinite;
 }
 
-
-@keyframes loader-spin {
-  from {
+@keyframes spin{
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
