--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   min-height: 100vh;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin: 0;
 }
 .colorRed {
   color: red;
@@ -12,6 +13,7 @@ body {
 }
 
 .loader {
+  display: inline-block;
   border: 10px solid #f3f3f3;
   border-top: 10px solid #3498db;
   border-radius: 50%;
@@ -47,12 +49,4 @@ body {
   right: 0;
   text-align: center;
   top: 0;
-}
-
-.footer {
-
-}
-
-.headerSpacer { 
-   padding-bottom: 30px;
 }
